02.behavioral/12.ServiceDiscovery/ingress-with-dispatch.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: random-generator
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: random-generator
              servicePort: 8080
          - path: /status
            backend:
              serviceName: service-status
              servicePort: 80
